--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "browser": "^0.2.6",
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
+    "nanoid": "^4.0.0",
     "ng-zorro-antd": "^14.1.1",
     "os-browserify": "^0.3.0",
     "rxjs": "~7.5.0",
