--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,10 @@
               "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "web3"
+            ]
           },
           "configurations": {
             "production": {
